--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
         <td>11.86 Earth years</td>
         <td>164.8 Earth years</td>
       </tr>
+      <tr>
+        <td>Learn More about these planets:</td>
+	<td><a href="http://science.nationalgeographic.com/science/space/planets/">National Geographic Website-Planets</a></td>
+      </tr>
     </table>
 	
     <footer id="footer">
