--- a/index.html
+++ b/index.html
@@ -71,16 +71,13 @@
         <td>11.86 Earth years</td>
         <td>164.8 Earth years</td>
       </tr>
-      <tr>
-        <td>Learn More about these planets:</td>
-	<td><a href="http://science.nationalgeographic.com/science/space/planets/">National Geographic Website-Planets</a></td>
-        <td></td>
-        <td></td>
-	<td></td>
-      </tr>
     </table>
 	
     <footer id="footer">
+      <p>
+        Learn More about these planets: 
+	<a href="http://science.nationalgeographic.com/science/space/planets/">National Geographic Website-Planets</a>
+      </p>	    
       <address>
         <p>Get in touch with me:</p>
         <p>Personal Email: <a href="mailto:reachabdu@gmail.com">reachabdu@gmail.com</a></p>
