--- a/index.html
+++ b/index.html
@@ -15,49 +15,49 @@
         <th>Jupiter</th>
         <th>Neptune</th>
       </tr>
-      <tr>
+      <tr class = "c1">
         <td>What they look like:</td>
         <td><img class="image" src="http://naturalhistory.si.edu/exhibits/evolving-universe/full/Venus.jpg" alt="Venus"></td>
         <td><img class="image" src="http://vignette2.wikia.nocookie.net/andromeda/images/2/2e/Earth-0.jpg/revision/latest?cb=20160325105941" alt="Earth"></td>
         <td><img class="image" src="http://vignette2.wikia.nocookie.net/hyperioncantos/images/e/e2/Jupiter.jpg/revision/latest?cb=20170228040543" alt="Jupiter"></td>
         <td><img class="image" src="http://solarsystem.nasa.gov/images/galleries/Neptune_Full.jpg" alt="Neptune"></td>
       </tr>
-      <tr>
+      <tr class = "c2">
         <td>Mass</td>
         <td>4.87x10<sup>23</sup> kg</td>
         <td>5.98x10<sup>24</sup> kg</td>
         <td>1.90x10<sup>27</sup> kg</td>
         <td>1.02x10<sup>26</sup> kg</td>
       </tr>
-      <tr>
+      <tr class = "c3">
         <td>Diameter</td>
         <td>12,104 km</td>
         <td>12,756 km</td>
         <td>142,800 km</td>
         <td>49,528 km</td>
       </tr>
-      <tr>
+      <tr class = "c4">
         <td>Mean Density</td>
         <td>5,250 kg/m<sup>3</sup></td>
         <td>5,520 kg/m<sup>3</sup></td>
         <td>1,314 kg/m<sup>3</sup></td>
         <td>1,640 kg/m<sup>3</sup></td>
       </tr>
-      <tr>
+      <tr class = "c5">
         <td>Escape Velocity</td>
         <td>10,400 m/s</td>
         <td>11,200 m/s</td>
         <td>59,500 m/s</td>
         <td>23,300 m/s</td>
       </tr>
-      <tr>
+      <tr class = "c6">
         <td>Average Dist. from Sun</td>
         <td>0.723 AU</td>
         <td>1 AU</td>
         <td>5.203 AU</td>
         <td>30.07 AU</td>
       </tr>
-      <tr>
+      <tr class = "c7">
         <td>Rotation Period</td>
         <td>243.02 Earth days (Retrograde)</td>
         <td>1 Earth day</td>
